[tool.poetry]
name = "single-mol"
version = "0.0.1"
description = "A package to accompany the Single Molecule Counting Perspective."
authors = ["Danielle A. Faivre"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
ipykernel = "^6.17.1"
pandas = ">=1.5.2"
msions = ">=0.2.0"
pymzml = ">=2.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
