[tool.poetry]
name = "single_mol"
version = "0.1.0"
description = "A package to accompany the Single Molecule Counting Perspective."
authors = ["Danielle A. Faivre"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
pymzml = ">=2.5.2"
pandas = ">=1.5.2"
msions = ">=0.3.0"
ipykernel = ">=6.19.4"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
myst-nb = {version = "^0.17.1", python = "^3.9"}
sphinx-autoapi = "^2.0.0"
sphinx-rtd-theme = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
